# rsm

./: .eslintrc.js  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  LICENSE.md  README.md  build.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  publish.yml  test.yml
docs/: requirements-doc.txt
docs/source/: cli-commands.rst  conf.py  contributing.rst  doctest_setup.py  faq.rst  first-manuscript.rst  index.rst  prod_conf.py  reference.rst  rsm_directive.py  rtd_conf.py  tutorials.rst
docs/source/_static/: custom.css  openlive.js  rsm.css
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: rsm.app.FullBuildApp.rst  rsm.app.LinterApp.rst  rsm.app.ParserApp.rst  rsm.app.Pipeline.rst  rsm.app.ProcessorApp.rst  rsm.app.RSMApp.rst  rsm.app.Task.rst  rsm.app.rst  rsm.builder.BaseBuilder.rst  rsm.builder.FullBuilder.rst  rsm.builder.SingleFileBuilder.rst  rsm.builder.rst  rsm.cli.rst  rsm.nodes.Abstract.rst  rsm.nodes.Algorithm.rst  rsm.nodes.Appendix.rst  rsm.nodes.Author.rst  rsm.nodes.BaseParagraph.rst  rsm.nodes.BaseReference.rst  rsm.nodes.Bibitem.rst  rsm.nodes.Bibliography.rst  rsm.nodes.Caption.rst  rsm.nodes.Cite.rst  rsm.nodes.ClaimBlock.rst  rsm.nodes.Code.rst  rsm.nodes.CodeBlock.rst  rsm.nodes.Construct.rst  rsm.nodes.Contents.rst  rsm.nodes.Corollary.rst  rsm.nodes.Definition.rst  rsm.nodes.Draft.rst  rsm.nodes.Enumerate.rst  rsm.nodes.Error.rst  rsm.nodes.Example.rst  rsm.nodes.Exercise.rst  rsm.nodes.Figure.rst  rsm.nodes.Heading.rst  rsm.nodes.Item.rst  rsm.nodes.Itemize.rst  rsm.nodes.Keyword.rst  (+70 more)
docs/source/rtd_conf/: conf.py
docs/source/tutorials/: bibliography.rst  cli-commands.rst  example.rst  first-manuscript.rst  handrail.rst  installation.rst  markup.rst  pipeline.rst  proofs.rst  quickstart.rst  recipes.rst  special.rst  syntax.rst  tooltips.rst
examples/: dingbats.rsm  indefinite.rsm  proof.rsm
rsm/: README.md  __init__.py  app.py  builder.py  cli.py  conftest.py  linter.py  manuscript.py  nodes.py  parser.py  reader.py  rsmlogger.py  tags.py  transformer.py  translator.py  tsparser.py  util.py  writer.py
rsm-examples/: atiyah.rsm  dingbats.rsm  ex1.rsm  indefinite.rsm  long_eqn.rsm  manuscript.rsm  par.rsm  proof.rsm
rsm/core/: __init__.py  app.py  builder.py  conf.py  linter.py  manuscript.py  nodes.py  parser.py  reader.py  rsmlogger.py  tags.py  transformer.py  translator.py  util.py  writer.py
rsm/core/ext/: contents.py  envs.py  labels.py  misc.py  proof_env.py  thm_env.py  util.py  writer.py
rsm/core/js/: hoverstepnumber.js  stepcontextmenu.js
rsm/core/rsm-theme/: layout.html
rsm/core/rsm-theme/static/: hoverstepnumber.js  rsm.css
rsm/core/rsm_theme/: __init__.py  setup.py  theme.conf
rsm/core/rsm_theme/static/: classes.js  hoverstepnumber.js  rsm.css  rsm.scss  tooltips.js  tree.js
rsm/core/static/: classes.js  rsm.scss  tooltips.js
rsm/rsm_edit/: README.md  package-lock.json  package.json
rsm/rsm_edit/src/: App.vue
rsm/rsm_edit/src/components/: Editor.vue  Viewer.vue
rsm/rsm_make/: __init__.py  main.py
rsm/scripts/: __init__.py  app.py  cli.py  lint.py  make.py  render.py
rsm/static/: classes.js  handrails.js  icons.js  keyboard.js  libraries.js  minimap.js  onload.js  rsm.css  rsm.scss  shortcuts.js  tooltips.js  tooltipster.bundle.css  tree.js
tests/: README.md  conf.py  conftest.py  demo.rst  rsm-create-test-from.py  rsm_test_builder.py  test_abstract.py  test_algorithm.py  test_appendix.py  test_author.py  test_autonumber.py  test_bibliography.py  test_claim.py  test_code.py  test_comments.py  test_construct.py  test_edit_commands.py  test_escapedstring.py  test_figure.py  test_handrails.py  test_inputs.py  test_lint.py  test_lists.py  test_logs.py  test_math.py  test_meta.py  test_nodes.py  test_paragraph.py  test_paragraph_hr.py  test_previous.py  test_proof.py  test_proof_hr.py  test_references.py  test_reftext.py  test_regions.py  test_render.py  test_section.py  test_sexp.py  test_shortcuts.py  test_simple.py  (+9 more)
tests/inputs/: index.rst  label_sect.rst  label_thm.rst  labels.rst  long_statement.rst  math.rst  test_nonum.rst
tests/rsm_test_theme/: __init__.py  layout.html  setup.py  theme.conf
tests/targets/: demo.html  index.html  label_sect.html  label_thm.html  labels.html  long_statement.html  math.html  test_nonum.html
tests/visual/: backstop.js  generate_references.py
tests/visual/backstop_data/bitmaps_test/20240514-194118/: report.json
tests/visual/backstop_data/bitmaps_test/20240516-221214/: report.json
tests/visual/backstop_data/bitmaps_test/20240516-221331/: report.json
tests/visual/backstop_data/bitmaps_test/20240516-221622/: report.json
tests/visual/backstop_data/bitmaps_test/20240516-222155/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-072303/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-072347/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-150839/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-201816/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-202124/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-202348/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-203112/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-203411/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-210322/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-224723/: report.json
tests/visual/backstop_data/bitmaps_test/20240517-224910/: report.json
tests/visual/backstop_data/bitmaps_test/20241130-191643/: report.json
tests/visual/backstop_data/bitmaps_test/20241130-192024/: report.json
tests/visual/backstop_data/ci_report/: xunit.xml
tests/visual/backstop_data/html_report/: config.js
tests/visual/rsm_data/: empty.html  empty.rsm  index.html  paragraph.html  paragraph.rsm  ref.html  ref.rsm  theorem_proof.rsm
tests/visual/rsm_data/static/: tooltips.js  tooltipster.bundle.js
(+1 files in other folders)
