# Project metadata

[project]
name = "rsm-markup"
version = "0.1.2"
description = "ReStructured Manuscript (RSM) markup language"
readme = "README.md"
authors = [{ name = "Leo Torres", email = "leo@leotrs.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["markup", "science", "publishing", "static site generator"]
dependencies = [
    "fs >= 2.4.15",
    "icecream >= 2.1.2",
    "livereload >= 2.6.3",
    "tree-sitter >= 0.20.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
doc = ["Sphinx>=5.3.0", "sphinx-autobuild >= 2021.3.14", "pydata-sphinx-theme >= 0.12.0"]
dev = [
    "black >= 22.3.0",
    "fastapi >= 0.86.0",
    "isort >= 5.10.1",
    "libsass >= 0.21.0",
    "mypy >= 0.942",
    "mypy-extensions >= 0.4.3",
    "uvicorn >= 0.19.0",
    "pytest>=7.1.1",
]

[project.urls]
Homepage = "https://write-rsm.org/"

[project.scripts]
rsm-make = "rsm.scripts.make:main"
rsm-render = "rsm.scripts.render:main"
rsm-lint = "rsm.scripts.lint:main"


# Mypy

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["icecream.*", "livereload.*", "sass.*"]
ignore_missing_imports = true


# Misc. tools

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
max-line-length = 88
good-names = ["i", "j", "k", "t", "c", "ex", "Run", "_"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    'slow: marks tests as slow (deselect with "-m \"not slow\"")',
    "serial",
]


# Poe the poet

[tool.poe.tasks]
test   = "pytest -vv -k 'not slow'"
test-all   = "pytest -vv"
doctest = { shell = "cd docs/ && make doctest && cd .. && pytest -vv --doctest-modules rsm/" }
docs = "sphinx-build docs/source/ docs/build/"
clean-docs = { shell= "cd docs && make clean" }
serve-docs  = { shell = "sphinx-autobuild docs/source/ docs/build/ --port 7001 --watch rsm/" }


# Build stuff

[tool.poetry]
name = "rsm-markup"
version = "0.1.2"
description = "ReStructured Manuscript (RSM) markup language"
authors = ["leotrs <leo@leotrs.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "rsm"}
]
include = [
    {path = "rsm/*.so", format = "wheel"}
]

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.20.1"
icecream = "^2.1.3"
livereload = "^2.6.3"
fs = "^2.4.16"
mypy = "^0.991"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
fastapi = "^0.88.0"
isort = "^5.10.1"
libsass = "^0.22.0"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
pylint = "^2.15.8"
poethepoet = "^0.16.5"

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
pydata-sphinx-theme = "^0.12.0"
sphinx-design = "^0.3.0"
sphinx-copybutton = "^0.5.1"
sphinx-autodoc-typehints = "^1.19.5"

[tool.poetry.scripts]
rsm-make = "rsm.scripts.make:main"
rsm-render = "rsm.scripts.render:main"
rsm-lint = "rsm.scripts.lint:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
