# Project metadata

[project]
name = "rsm-markup"
version = "0.2.5"
description = "ReStructured Manuscripts (RSM) markup language"
readme = "README.md"
authors = [{ name = "Leo Torres", email = "leo@leotrs.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["markup", "science", "publishing", "static site generator"]
dependencies = [
    "fs >= 2.4.15",
    "icecream >= 2.1.2",
    "livereload >= 2.6.3",
    "tree-sitter >= 0.23.2",
    "ujson>=5.10.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
doc = ["Sphinx>=5.3.0", "sphinx-autobuild >= 2021.3.14", "pydata-sphinx-theme >= 0.12.0"]
dev = [
    "black >= 22.3.0",
    "fastapi >= 0.86.0",
    "isort >= 5.10.1",
    "mypy >= 0.942",
    "mypy-extensions >= 0.4.3",
    "uvicorn >= 0.19.0",
    "pytest>=7.1.1",
]

[project.urls]
Homepage = "https://write-rsm.org/"

[project.scripts]
rsm-make = "rsm.cli:make"
rsm-render = "rsm.cli:render"
rsm-lint = "rsm.cli:lint"


# cibuildwheel

[tool.cibuildwheel]
# build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp310-macosx_x86_64", "cp311-macosx_x86_64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp310-win_amd64", "cp310-win32", "cp311-win_amd64", "cp311-win32"]
build = ["cp310-macosx_x86_64", "cp311-macosx_x86_64", "cp310-macosx_arm64", "cp311-macosx_arm64", "cp310-win_amd64", "cp310-win32", "cp311-win_amd64", "cp311-win32"]
manylinux-x86_64-image = "manylinux_2_34"

[tool.cibuildwheel.linux]
before-all = '''echo "###### START HERE ######"

# echo "###### Downloading and extracting glibc 2.34 code ######"
# mkdir -p /tmp/glibc-2.34
# cd /tmp
# curl -LO http://ftp.gnu.org/gnu/libc/glibc-2.34.tar.gz
# tar -xvzf glibc-2.34.tar.gz;
# cd glibc-2.34
# mkdir build
# cd build

# echo "###### GCC version ######"
# gcc -v

# echo "###### Configuring ######"
# make clean
# ../configure --prefix="$HOME/.local/glibc-2.34" --disable-werror CFLAGS="-Wno-error=use-after-free -O2"

# echo "###### Installing ######"
# make -j$(nproc)
# make install

echo "###### Downloading and installing fnm ######"
curl -o- https://fnm.vercel.app/install | bash
export PATH="$HOME/.local/share/fnm:$PATH"

echo "###### Old version ######"
ldd --version

# echo "###### New version ######"
# export LD_LIBRARY_PATH="$HOME/.local/glibc-2.34/lib:$LD_LIBRARY_PATH"
# export PATH="$HOME/.local/glibc-2.34/bin:$PATH"
# ldd --version
# which ldd
# which gcc

echo "###### fnm env ######"
eval "$(fnm env)"

echo "###### Installing node and npm ######"
fnm install 20
node -v
npm -v

echo "###### DONE ######"
'''


# Mypy

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["icecream.*", "livereload.*", "sass.*"]
ignore_missing_imports = true


# Misc. tools

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
max-line-length = 88
good-names = ["i", "j", "k", "t", "c", "h", "ex", "Run", "_", "fn"]
disable = ["too-few-public-methods"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    'slow: marks tests as slow (deselect with "-m \"not slow\"")',
    "serial",
]
filterwarnings = [
    "ignore:.*pkg_resources.*:DeprecationWarning",
]


# Poe the poet

[tool.poe.tasks]
test   = "pytest -vv -k 'not slow'"
test-all   = "pytest -vv"
test-docs = { shell = "cd docs/ && make doctest && cd .. && pytest -vv --doctest-modules rsm/" }
docs = "sphinx-build docs/source/ docs/build/"
docs-clean = { shell= "cd docs && make clean" }
docs-serve  = { shell = "sphinx-autobuild docs/source/ docs/build/ --port 7001 --watch rsm/" }


# Build stuff

[tool.poetry]
name = "rsm-markup"
version = "0.2.5"
description = "ReStructured Manuscript (RSM) markup language"
authors = ["leotrs <leo@leotrs.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "rsm"}
]
include = [
    {path = "rsm/*.so", format = "wheel"},
    {path = "tree-sitter-rsm/", format = "sdist"}
]

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.9"
tree-sitter = "^0.23.2"
icecream = "^2.1.3"
livereload = "^2.6.3"
fs = "^2.4.16"
mypy = "^0.991"
pre-commit = "^2.20.0"
ujson = "^5.6.0"
types-ujson = "^5.6.0.0"
pygments = "^2.14.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
fastapi = "^0.88.0"
isort = "^5.10.1"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
pylint = "^2.15.8"
poethepoet = "^0.16.5"
cibuildwheel = "^2.11.4"

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
pydata-sphinx-theme = "^0.12.0"
sphinx-design = "^0.3.0"
sphinx-copybutton = "^0.5.1"
sphinx-autodoc-typehints = "^1.19.5"

[tool.poetry.scripts]
rsm-make = "rsm.cli:make"
rsm-render = "rsm.cli:render"
rsm-lint = "rsm.cli:lint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
